Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • ModemManager ModemManager
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributor statistics
    • Graph
    • Compare revisions
  • Issues 276
    • Issues 276
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 27
    • Merge requests 27
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Artifacts
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
    • Model experiments
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar

Admin message

Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.

  • Mobile broadband connectivityMobile broadband connectivity
  • ModemManagerModemManager
  • Issues
  • #349

1.16.2 compile error with libgudev 230

Just tried to cross build 1.16.2 with ptxdist and ran into the error below. I suspect the build requirements are not met and ModemManager's ./configure does not check for the actual needed versions in correctly. Which libgudev version is at least required to build ModemManager 1.16.x?

Making all in src
make[2]: Entering directory '/home/adahl/src/DistroKit/platform-v7a/build-target/ModemManager-1.16.2/src'
make  all-recursive
make[3]: Entering directory '/home/adahl/src/DistroKit/platform-v7a/build-target/ModemManager-1.16.2/src'
Making all in .
make[4]: Entering directory '/home/adahl/src/DistroKit/platform-v7a/build-target/ModemManager-1.16.2/src'
  CC       kerneldevice/libkerneldevice_la-mm-kernel-device-udev.lo
In file included from /home/adahl/src/DistroKit/platform-v7a/sysroot-target/usr/lib/glib-2.0/include/glibconfig.h:9,
                 from /home/adahl/src/DistroKit/platform-v7a/sysroot-target/usr/include/glib-2.0/glib/gtypes.h:32,
                 from /home/adahl/src/DistroKit/platform-v7a/sysroot-target/usr/include/glib-2.0/glib/galloca.h:32,
                 from /home/adahl/src/DistroKit/platform-v7a/sysroot-target/usr/include/glib-2.0/glib.h:30,
                 from ../libmm-glib/mm-common-helpers.h:18,
                 from ../libmm-glib/libmm-glib.h:59,
                 from kerneldevice/mm-kernel-device-udev.c:20:
kerneldevice/mm-kernel-device-udev.c: In function 'preload_contents_platform':
kerneldevice/mm-kernel-device-udev.c:84:15: error: unknown type name 'GUdevDevice_autoptr'
   84 |     g_autoptr(GUdevDevice) iter = NULL;
      |               ^~~~~~~~~~~
/home/adahl/src/DistroKit/platform-v7a/sysroot-target/usr/include/glib-2.0/glib/gmacros.h:1029:43: note: in definition of macro '_GLIB_AUTOPTR_TYPENAME'
 1029 | #define _GLIB_AUTOPTR_TYPENAME(TypeName)  TypeName##_autoptr
      |                                           ^~~~~~~~
kerneldevice/mm-kernel-device-udev.c:84:5: note: in expansion of macro 'g_autoptr'
   84 |     g_autoptr(GUdevDevice) iter = NULL;
      |     ^~~~~~~~~
kerneldevice/mm-kernel-device-udev.c:84:5: error: cleanup argument not a function
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking