kerneldevice,udev: don't use autoptr in GUdev types

The autoptr support in all GUdev types was introduced in
commit 272533131c6ed38479a88805, included in libgudev 232.

In the MM 1.16 branch we depend on libgudev 147, so avoid
implicitly bumping the required version.

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/349